Include new files in csproj

--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -275,14 +275,17 @@
     <Content Include="StaticContent\app\js\components\myWords.js" />
     <Content Include="StaticContent\app\js\components\pickerTest.js" />
     <Content Include="StaticContent\app\js\components\userStat.js" />
+    <Content Include="StaticContent\app\js\helpComponents\editMyWord.js" />
     <Content Include="StaticContent\app\js\helpComponents\loadingAnimation.js" />
     <Content Include="StaticContent\app\js\helpComponents\loadingLockDisplay.js" />
     <Content Include="StaticContent\app\js\helpComponents\modalWindow.js" />
+    <Content Include="StaticContent\app\js\helpComponents\myWordsHeader.js" />
     <Content Include="StaticContent\app\js\helpComponents\progressBar.js" />
     <Content Include="StaticContent\app\js\helpers\commonHelper.js" />
     <Content Include="StaticContent\app\js\helpers\constantStorage.js" />
     <Content Include="StaticContent\app\js\helpers\jqueryHelper.js" />
     <Content Include="StaticContent\app\js\main.js" />
+    <Content Include="StaticContent\app\js\models\modalWindowModel.js" />
     <Content Include="StaticContent\app\js\models\pickerTestModel.js" />
     <Content Include="StaticContent\app\js\models\User.js" />
     <Content Include="StaticContent\app\js\models\userStatModel.js" />
@@ -299,9 +302,11 @@
     <Content Include="StaticContent\app\templates\components\myWords.html" />
     <Content Include="StaticContent\app\templates\components\pickerTest.html" />
     <Content Include="StaticContent\app\templates\components\userStat.html" />
+    <Content Include="StaticContent\app\templates\helpComponents\editMyWord.html" />
     <Content Include="StaticContent\app\templates\helpComponents\loadingAnimation.html" />
     <Content Include="StaticContent\app\templates\helpComponents\loadingLockDisplay.html" />
     <Content Include="StaticContent\app\templates\helpComponents\modalWindow.html" />
+    <Content Include="StaticContent\app\templates\helpComponents\myWordsHeader.html" />
     <Content Include="StaticContent\app\templates\helpComponents\progressBar.html" />
     <Content Include="StaticContent\node_modules\%40angular\common\bundles\common-testing.umd.js" />
     <Content Include="StaticContent\node_modules\%40angular\common\bundles\common.umd.js" />
