--- a/WebSite/StaticContent/package.json
+++ b/WebSite/StaticContent/package.json
@@ -25,13 +25,15 @@
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "typescript": "^2.0.2",
-    "typings": "^1.3.2",
     "gulp": "^3.9.1",
-    "path": "^0.12.7",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
+    "gulp-tsc": "^1.2.0",
+    "gulp-tslint": "^7.1.0",
     "gulp-typescript": "^2.13.6",
-    "gulp-tsc": "^1.2.0"
+    "path": "^0.12.7",
+    "tslint": "^4.5.1",
+    "typescript": "^2.0.2",
+    "typings": "^1.3.2"
   }
 }
