--- a/WebSite/StaticContent/package.json
+++ b/WebSite/StaticContent/package.json
@@ -28,6 +28,7 @@
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
+    "gulp-sass": "^3.1.0",
     "gulp-tsc": "^1.2.0",
     "gulp-tslint": "^7.1.0",
     "gulp-typescript": "^2.13.6",
