--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -265,15 +265,18 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="StaticContent\app\css\components\selectableList.css" />
+    <Content Include="StaticContent\app\css\components\toolbar.css" />
     <Content Include="StaticContent\app\css\Tew.css" />
     <Content Include="StaticContent\app\js\app.routes.js" />
     <Content Include="StaticContent\app\js\boot.js" />
     <Content Include="StaticContent\app\js\components\addWord.js" />
     <Content Include="StaticContent\app\js\components\app.js" />
-    <Content Include="StaticContent\app\js\components\home.js" />
     <Content Include="StaticContent\app\js\components\irregularVerbs.js" />
     <Content Include="StaticContent\app\js\components\myWords.js" />
     <Content Include="StaticContent\app\js\components\pickerTest.js" />
+    <Content Include="StaticContent\app\js\components\selectableList.js" />
+    <Content Include="StaticContent\app\js\components\toolbar.js" />
     <Content Include="StaticContent\app\js\components\userStat.js" />
     <Content Include="StaticContent\app\js\components\writeTest.js" />
     <Content Include="StaticContent\app\js\helpComponents\editMyWord.js" />
@@ -288,6 +291,7 @@
     <Content Include="StaticContent\app\js\main.js" />
     <Content Include="StaticContent\app\js\models\modalWindowModel.js" />
     <Content Include="StaticContent\app\js\models\pickerTestModel.js" />
+    <Content Include="StaticContent\app\js\models\selectableListItemModel.js" />
     <Content Include="StaticContent\app\js\models\translateModel.js" />
     <Content Include="StaticContent\app\js\models\User.js" />
     <Content Include="StaticContent\app\js\models\userStatModel.js" />
@@ -303,6 +307,8 @@
     <Content Include="StaticContent\app\templates\components\irregularVerbs.html" />
     <Content Include="StaticContent\app\templates\components\myWords.html" />
     <Content Include="StaticContent\app\templates\components\pickerTest.html" />
+    <Content Include="StaticContent\app\templates\components\selectableList.html" />
+    <Content Include="StaticContent\app\templates\components\toolbar.html" />
     <Content Include="StaticContent\app\templates\components\userStat.html" />
     <Content Include="StaticContent\app\templates\components\writeTest.html" />
     <Content Include="StaticContent\app\templates\helpComponents\editMyWord.html" />
