Prepare to remove bootstrap css

--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -225,6 +225,7 @@
     <Content Include="Content\Images\multy-user.png" />
     <Content Include="Content\Images\users.png" />
     <Content Include="Content\Images\words.png" />
+    <Content Include="Content\TewLayout.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -265,14 +266,20 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="StaticContent\app\css\components\addWord.css" />
+    <Content Include="StaticContent\app\css\components\common.css" />
+    <Content Include="StaticContent\app\css\components\editMyWord.css" />
+    <Content Include="StaticContent\app\css\components\loadingLockDisplay.css" />
     <Content Include="StaticContent\app\css\components\modalWindow.css" />
     <Content Include="StaticContent\app\css\components\selectableList.css" />
+    <Content Include="StaticContent\app\css\components\tewTable.css" />
+    <Content Include="StaticContent\app\css\components\tewTest.css" />
     <Content Include="StaticContent\app\css\components\toolbar.css" />
-    <Content Include="StaticContent\app\css\Tew.css" />
     <Content Include="StaticContent\app\js\app.routes.js" />
     <Content Include="StaticContent\app\js\boot.js" />
     <Content Include="StaticContent\app\js\components\addWord.js" />
     <Content Include="StaticContent\app\js\components\app.js" />
+    <Content Include="StaticContent\app\js\components\editMyWord.js" />
     <Content Include="StaticContent\app\js\components\irregularVerbs.js" />
     <Content Include="StaticContent\app\js\components\myWords.js" />
     <Content Include="StaticContent\app\js\components\pickerTest.js" />
@@ -280,12 +287,10 @@
     <Content Include="StaticContent\app\js\components\toolbar.js" />
     <Content Include="StaticContent\app\js\components\userStat.js" />
     <Content Include="StaticContent\app\js\components\writeTest.js" />
-    <Content Include="StaticContent\app\js\helpComponents\editMyWord.js" />
     <Content Include="StaticContent\app\js\helpComponents\loadingAnimation.js" />
     <Content Include="StaticContent\app\js\helpComponents\loadingLockDisplay.js" />
     <Content Include="StaticContent\app\js\helpComponents\modalWindow.js" />
     <Content Include="StaticContent\app\js\helpComponents\myWordsHeader.js" />
-    <Content Include="StaticContent\app\js\helpComponents\progressBar.js" />
     <Content Include="StaticContent\app\js\helpers\commonHelper.js" />
     <Content Include="StaticContent\app\js\helpers\constantStorage.js" />
     <Content Include="StaticContent\app\js\helpers\jqueryHelper.js" />
@@ -305,6 +310,7 @@
     <Content Include="StaticContent\app\js\services\pubSub.js" />
     <Content Include="StaticContent\app\templates\components\addWord.html" />
     <Content Include="StaticContent\app\templates\components\app.html" />
+    <Content Include="StaticContent\app\templates\components\editMyWord.html" />
     <Content Include="StaticContent\app\templates\components\irregularVerbs.html" />
     <Content Include="StaticContent\app\templates\components\myWords.html" />
     <Content Include="StaticContent\app\templates\components\pickerTest.html" />
@@ -312,12 +318,10 @@
     <Content Include="StaticContent\app\templates\components\toolbar.html" />
     <Content Include="StaticContent\app\templates\components\userStat.html" />
     <Content Include="StaticContent\app\templates\components\writeTest.html" />
-    <Content Include="StaticContent\app\templates\helpComponents\editMyWord.html" />
     <Content Include="StaticContent\app\templates\helpComponents\loadingAnimation.html" />
     <Content Include="StaticContent\app\templates\helpComponents\loadingLockDisplay.html" />
     <Content Include="StaticContent\app\templates\helpComponents\modalWindow.html" />
     <Content Include="StaticContent\app\templates\helpComponents\myWordsHeader.html" />
-    <Content Include="StaticContent\app\templates\helpComponents\progressBar.html" />
     <Content Include="StaticContent\node_modules\%40angular\common\bundles\common-testing.umd.js" />
     <Content Include="StaticContent\node_modules\%40angular\common\bundles\common.umd.js" />
     <Content Include="StaticContent\node_modules\%40angular\common\bundles\common.umd.min.js" />
