--- a/WebSite/StaticContent/package.json
+++ b/WebSite/StaticContent/package.json
@@ -25,6 +25,8 @@
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
@@ -33,8 +35,11 @@
     "gulp-tslint": "^7.1.0",
     "gulp-typescript": "^2.13.6",
     "path": "^0.12.7",
+    "sass-loader": "^6.0.6",
+    "ts-loader": "^3.2.0",
     "tslint": "^4.5.1",
-    "typescript": "^2.0.2",
-    "typings": "^1.3.2"
+    "typescript": "^2.6.2",
+    "typings": "^1.3.2",
+    "webpack": "^3.10.0"
   }
 }
