--- a/WebSite/StaticContent/package.json
+++ b/WebSite/StaticContent/package.json
@@ -40,6 +40,7 @@
     "style-loader": "^0.19.1",
     "ts-loader": "^3.2.0",
     "tslint": "^4.5.1",
+    "tslint-loader": "^3.5.3",
     "typescript": "^2.6.2",
     "typings": "^1.3.2",
     "webpack": "^3.10.0"
