--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -253,49 +253,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="StaticContent\app\css\components\addWord.css" />
-    <Content Include="StaticContent\app\css\components\common.css" />
-    <Content Include="StaticContent\app\css\components\editMyWord.css" />
-    <Content Include="StaticContent\app\css\components\loadingLockDisplay.css" />
-    <Content Include="StaticContent\app\css\components\modalWindow.css" />
-    <Content Include="StaticContent\app\css\components\selectableList.css" />
-    <Content Include="StaticContent\app\css\components\tewTable.css" />
-    <Content Include="StaticContent\app\css\components\tewTest.css" />
-    <Content Include="StaticContent\app\css\components\toolbar.css" />
-    <Content Include="StaticContent\app\css\components\userStat.css" />
-    <Content Include="StaticContent\app\js\app.routes.js" />
-    <Content Include="StaticContent\app\js\boot.js" />
-    <Content Include="StaticContent\app\js\components\addWord.js" />
-    <Content Include="StaticContent\app\js\components\app.js" />
-    <Content Include="StaticContent\app\js\components\editMyWord.js" />
-    <Content Include="StaticContent\app\js\components\irregularVerbs.js" />
-    <Content Include="StaticContent\app\js\components\myWords.js" />
-    <Content Include="StaticContent\app\js\components\pickerTest.js" />
-    <Content Include="StaticContent\app\js\components\selectableList.js" />
-    <Content Include="StaticContent\app\js\components\toolbar.js" />
-    <Content Include="StaticContent\app\js\components\userStat.js" />
-    <Content Include="StaticContent\app\js\components\writeTest.js" />
-    <Content Include="StaticContent\app\js\helpComponents\loadingAnimation.js" />
-    <Content Include="StaticContent\app\js\helpComponents\loadingLockDisplay.js" />
-    <Content Include="StaticContent\app\js\helpComponents\modalWindow.js" />
-    <Content Include="StaticContent\app\js\helpComponents\myWordsHeader.js" />
-    <Content Include="StaticContent\app\js\helpers\commonHelper.js" />
-    <Content Include="StaticContent\app\js\helpers\constantStorage.js" />
-    <Content Include="StaticContent\app\js\helpers\jqueryHelper.js" />
-    <Content Include="StaticContent\app\js\main.js" />
-    <Content Include="StaticContent\app\js\models\modalWindowModel.js" />
-    <Content Include="StaticContent\app\js\models\pickerTestModel.js" />
-    <Content Include="StaticContent\app\js\models\selectableListItemModel.js" />
-    <Content Include="StaticContent\app\js\models\translateModel.js" />
-    <Content Include="StaticContent\app\js\models\User.js" />
-    <Content Include="StaticContent\app\js\models\userStatModel.js" />
-    <Content Include="StaticContent\app\js\models\userWords.js" />
-    <Content Include="StaticContent\app\js\models\Word.js" />
-    <Content Include="StaticContent\app\js\models\wordsCloudModel.js" />
-    <Content Include="StaticContent\app\js\models\writeTestModel.js" />
-    <Content Include="StaticContent\app\js\services\httpService.js" />
-    <Content Include="StaticContent\app\js\services\modalWindowServise.js" />
-    <Content Include="StaticContent\app\js\services\pubSub.js" />
+    <Content Include="StaticContent\app\bundles\bundle.js" />
     <Content Include="StaticContent\app\templates\components\addWord.html" />
     <Content Include="StaticContent\app\templates\components\app.html" />
     <Content Include="StaticContent\app\templates\components\editMyWord.html" />
