--- a/EnglishLearnBLL/EnglishLearnBLL.csproj
+++ b/EnglishLearnBLL/EnglishLearnBLL.csproj
@@ -47,7 +47,12 @@
     <Compile Include="Models\WordUpdateModel.cs" />
     <Compile Include="Models\WriteTestModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\WriteTestBuilder.cs" />
+    <Compile Include="Tests\PickerTestBuilder.cs" />
+    <Compile Include="Tests\TestBuilder.cs" />
     <Compile Include="Tests\TestCreator.cs" />
+    <Compile Include="Tests\TestDataBuilder.cs" />
+    <Compile Include="Tests\TestTypes.cs" />
     <Compile Include="WordLevelManager\WordLevelManager.cs" />
   </ItemGroup>
   <ItemGroup>
