--- a/WebSite/StaticContent/package.json
+++ b/WebSite/StaticContent/package.json
@@ -34,6 +34,6 @@
     "tslint-loader": "^3.5.3",
     "typescript": "^2.6.2",
     "typings": "^1.3.2",
-    "webpack": "^3.10.0"
+    "webpack": "3.10.0"
   }
 }
