--- a/WebSite/Web.Release.config
+++ b/WebSite/Web.Release.config
@@ -3,6 +3,9 @@
 <!-- For more information on using Web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=301874 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+  <appSettings xdt:Transform="RemoveAttributes(debug)">
+    <add key="DataBaseName" value="EnglishLearnContext" xdt:Transform="Insert"/>
+  </appSettings>
   <!--
     In the example below, the "SetAttributes" transform will change the value of
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator
