--- a/WebSite/Web.Base.config
+++ b/WebSite/Web.Base.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -30,10 +30,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="DataBaseName" value="EnglishLearnContext"/>
   </appSettings>
   <system.web>
-    <compilation targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <customErrors mode="Off"></customErrors>
     <authentication mode="Forms">
