--- a/WebSite/Web.Debug.config
+++ b/WebSite/Web.Debug.config
@@ -4,7 +4,7 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <appSettings>
-    <add key="DataBaseName" value="EnglishLearnContext_Dev" xdt:Transform="Insert"/>
+    <add key="DataBaseName" value="EnglishLearnDataBase_Dev" xdt:Transform="Insert"/>
   </appSettings>
   <!--
     In the example below, the "SetAttributes" transform will change the value of
