--- a/WebSite/Web.Release.config
+++ b/WebSite/Web.Release.config
@@ -4,7 +4,7 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <appSettings xdt:Transform="RemoveAttributes(debug)">
-    <add key="DataBaseName" value="EnglishLearnContext" xdt:Transform="Insert"/>
+    <add key="DataBaseName" value="EnglishLearnDataBase" xdt:Transform="Insert"/>
   </appSettings>
   <!--
     In the example below, the "SetAttributes" transform will change the value of
