--- a/WebSite/Web.config
+++ b/WebSite/Web.config
@@ -30,10 +30,11 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="DataBaseName" value="EnglishLearnContext"/>
+    <add key="Version" value="v1.0.1"/>
+    <add key="DataBaseName" value="EnglishLearnDataBase_Dev"/>
   </appSettings>
   <system.web>
-    <compilation targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <customErrors mode="Off"></customErrors>
     <authentication mode="Forms">
